# final-year-project

./: README.md  pub command  rosserial command
arduino_ros (mot3)/abd/: abd.ino
base_ws (odom)/devel/: .catkin
base_ws (odom)/devel/lib/pkgconfig/: Assem_fnl_moveit_config.pc  odom.pc
base_ws (odom)/src/Assem_fnl/: package.xml
base_ws (odom)/src/Assem_fnl/config/: joint_controllers.yaml
base_ws (odom)/src/Assem_fnl/launch/: Assem_fnl.launch  gazebo.launch
base_ws (odom)/src/Assem_fnl/meshes old/: base_link.STL  link_Msh_1.STL  link_Msh_2.STL  link_sh1_1.STL  link_sh1_2.STL  link_sh2_1.STL  link_t1_1.STL  link_t2_1.STL
base_ws (odom)/src/Assem_fnl/urdf/: Assem_fnl.urdf
base_ws (odom)/src/Assem_fnl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
base_ws/devel/: .rosinstall  setup.sh
base_ws/src/Assem_fnl/: CMakeLists.txt
base_ws/src/Assem_fnl_hardware_interface/: CMakeLists.txt  package.xml
base_ws/src/Assem_fnl_hardware_interface/Assem_fnl_control/: CMakeLists.txt  package.xml
base_ws/src/Assem_fnl_hardware_interface/Assem_fnl_control/config/: Assem_fnl_controllers.yaml
base_ws/src/Assem_fnl_hardware_interface/Assem_fnl_control/include/Assem_fnl_control/: Assem_fnl_hw_interface.h
base_ws/src/Assem_fnl_hardware_interface/Assem_fnl_control/launch/: Assem_fnl_hardware.launch  Assem_fnl_simulation.launch  Assem_fnl_test_trajectory.launch  Assem_fnl_visualize.launch
base_ws/src/Assem_fnl_hardware_interface/Assem_fnl_control/src/: Assem_fnl_hw_interface.cpp  Assem_fnl_hw_main.cpp
base_ws/src/grasping/: CMakeLists.txt
(+93 files in other folders)
